# pyhrtc

./: .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  README.md  add_couples.py  generator.py  get_density.py  multi_generator.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
pyhrtc/: algorithms.py  basics.py  fileio.py  generator.py  instance.py  models.py  sat.py  weightedinstance.py
tests/: smti-simple.instance  test_algorithms.py  test_couples.py  test_max_card_matching.py  test_preprocess.py  test_readers.py  test_solve.py  test_stability.py  test_thresholds.py
tests/testfiles/: hrt.instance  hrtc-iain-small.instance  hrtc-iain.instance  smti-grp-diff-maxweight.instance  smti-grp-noheader-unbal.instance  smti-grp-noheader.instance  smti-grp-simple.instance  smti-grp-thresholds.instance  smti-nocomplete.instance  smti.instance  test1.instance  test1.output  test2.instance  test2.output
