[metadata]
name = pyhrtc
version = 0.0.6
author = William Pettersson
author_email = william@ewpettersson.se
description = Various algorithms and tools for stable matching problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IP-MATCH/pyhrtc
license = GPLv3
license_file = LICENSE
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Development Status :: 4 - Beta
        Operating System :: OS Independent

[options]
py_modules = pyhrtc
python_requires = >=3.6

[nosetests]
with-coverage = 1
cover-package = pyhrtc
rednose = 1
